rollout/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: enabled
  name: swan-front-blue-green
#  name: rollouts-demo-istio-bleu-green
