rollout/blue-green.yaml
apiVersion: argoproj.io/v1alpha1               # Create a rollout resource
kind: Rollout
metadata:
  name: frontend
spec:
  replicas: 3
  workloadRef:                                 # Reference an existing Deployment using workloadRef field
    apiVersion: apps/v1
    kind: Deployment
    name: frontend
  strategy:
    blueGreen:
      autoPromotionEnabled: false
      activeService: frontend-active
      previewService: frontend-preview
      previewReplicaCount: 2
      scaleDownDelaySeconds: 15
      postPromotionAnalysis:
        templates:
        - templateName: success-rate
        args:
          - name: service-name
            value: frontend-active.swan-front-blue-green.svc.cluster.local
