rollout/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-active
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-preview
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: frontend
