rollout/destination-rule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-active
spec:
  host: frontend-active
  subsets:
    - name: v1
      labels:
        app: frontend
