rollout/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  gateways:
    - swan-front-blue-green/frontend
  hosts:
    - frontend-active
  http:
    - match:
      route:
        - destination:
            host: frontend-active
            subset: v1
            port:
              number: 80
